--- a/artemis/templates/autoscaler/horizontal-pod-autoscaler.yml
+++ b/artemis/templates/autoscaler/horizontal-pod-autoscaler.yml
@@ -1,5 +1,5 @@
 {{- if .Values.artemis.autoscaler.enabled }}
-apiVersion: autoscaling/v2
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "artemis.fullname" . }}
@@ -12,6 +12,10 @@ spec:
     name: {{ include "artemis.fullname" . }}
   minReplicas: {{ .Values.artemis.autoscaler.minReplicas }}
   maxReplicas: {{ .Values.artemis.autoscaler.maxReplicas }}
+  {{- with .Values.artemis.autoscaler.behavior }}
+  behavior:
+    {{- toYaml . | nindent 8 }}
+  {{- end }}
   metrics:
   {{- if .Values.artemis.autoscaler.metrics.usersPerInstance }}
   - type: Pods
