--- a/artemis/values.yaml
+++ b/artemis/values.yaml
@@ -143,7 +143,7 @@ artemis:
   autoscaler:
     # Whether the autoscaling should be used for the Artemis deployment
     enabled: false
-    # Wether custom prometheus + prometheus adapter instances should be deployed
+    # Wether custom prometheus + prometheus adapter instances should be deployed. You have to provide a custom prometheus instance & configure it, if you set this value to true.
     customPrometheus: false
     # IP address range that should be allowed to query metrics (must include the IP of the deployed prometheus server)
     monitoringIp: "0.0.0.0/0"
@@ -151,9 +151,19 @@ artemis:
     behavior: {}
     # Which metrics should be used for the scaling
     metrics:
-      # Average number of users that should be targeted - the autoscaler will scale according to this metrics
-      # Note that this metrics requires the deployment of a prometheus server and a prometheus adapter
+      # Average number of users per instance that should be targeted - the autoscaler will scale according to this metrics
       usersPerInstance: 100
+      # External metrics: These metrics are not dependent on the individual Artemis instance but are the same across all instances.
+      # These metrics can be used for preemptive scaling
+      externalMetrics:
+        # Possible metrics:
+        # artemis.scheduled.{exams,exercises}.{due,release}.{count,student_multiplier,student_multiplier.active.14}
+        - name: "artemis_scheduled_exercises_release_student_multiplier"
+          targetValue: 50 # How many users should be targeted
+          # The labels define which metric should be used as multiple data points for the same name exist
+          labels:
+            exerciseType: "TEXT" # Only for exercise-metrics, one of TEXT, QUIZ, PROGRAMMING, MODELING, FILE_UPLOAD
+            range: "120" # in minutes, one of 5, 15, 30, 45, 60, 120
     # Minimum number of replicas
     minReplicas: 1
     # Maximum number of replicas
@@ -209,6 +219,18 @@ prometheus:
       scrape_interval: "15s"
 
 prometheus-adapter:
+  rbac:
+    # Whether e.g. a ClusterRoleBinding should be created. This should usually be set to false if artemis.autoscaaler.customPrometheus is set to true.
+    create: true
+  rules:
+    # You might want to disable the default roles in case you use a custom prometheus instance
+    default: true
+    external:
+    # This rule transforms the metrics provided by Artemis (Prometheus-metrics) to Kubernetes metrics. The labels are also transformed.
+    - seriesQuery: '{range!=""}'
+      resources:
+        template: <<.Resource>>
+      metricsQuery: avg(<<.Series>>{<<.LabelMatchers>>})
   prometheus:
       port: 80
       url: http://{{ tpl (.Release.Name) . }}-prometheus-server.{{ tpl (.Release.Namespace) . }}.svc
