--- a/artemis/templates/services/artemis-service-profile.yaml
+++ b/artemis/templates/services/artemis-service-profile.yaml
@@ -5,6 +5,10 @@ metadata:
   name: {{ include "artemis.fullname" $ }}-{{.profile}}
   labels:
     {{- include "artemis.labels" $ | nindent 4 }}
+  {{- with $.Values.artemis.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ $.Values.artemis.service.type }}
   ports:
